@@ -6,18 +6,34 @@ import java.sql.*;
 import java.util.ArrayList;
 import java.util.List;
 
+/**
+ * concrete implementation of employeeDAO
+ * Access and manage employee data from MYSQL database
+ * Uses JDBC to connect to MYSQL database
+ */
 public class MySQLEmployeeDAO implements EmployeeDAO {
     // JDBC connection parameters
     private final String dbUrl;
     private final String dbUser;
     private final String dbPassword;
 
+    /**
+     * Constructor, takes information required to connect to mysql database
+     * @param dbUrl database url
+     * @param dbUser user
+     * @param dbPassword password
+     */
     public MySQLEmployeeDAO(String dbUrl, String dbUser, String dbPassword) {
         this.dbUrl = dbUrl;
         this.dbUser = dbUser;
         this.dbPassword = dbPassword;
     }
 
+    /**
+     * Retrieves employee information from database based on id
+     * @param id employee's id
+     * @return EmployeeEntity object
+     */
     @Override
     public EmployeeEntity getEmployeeById(int id) {
         EmployeeEntity employee = null;
@@ -27,7 +43,7 @@ public class MySQLEmployeeDAO implements EmployeeDAO {
             try (ResultSet resultSet = statement.executeQuery()) {
                 if (resultSet.next()) {
                     employee = new EmployeeEntity(
-                            new Integer(resultSet.getInt("EMPLOYEEID")).toString(),
+                            Integer.valueOf(resultSet.getInt("EMPLOYEEID")).toString(),
                             resultSet.getString("LASTNAME"),
                             resultSet.getString("FIRSTNAME"),
                             resultSet.getString("ADDRESS"),
@@ -44,6 +60,10 @@ public class MySQLEmployeeDAO implements EmployeeDAO {
         return employee;
     }
 
+    /**
+     * Retrieves all employee records from database
+     * @return List of EmployeeEntity objects
+     */
     @Override
     public List<EmployeeEntity> getAllEmployees() {
         List<EmployeeEntity> employees = new ArrayList<>();
@@ -52,7 +72,7 @@ public class MySQLEmployeeDAO implements EmployeeDAO {
              ResultSet resultSet = statement.executeQuery("SELECT * FROM employees")) {
             while (resultSet.next()) {
                 EmployeeEntity employee = new EmployeeEntity(
-                        new Integer(resultSet.getInt("EMPLOYEEID")).toString(),
+                        Integer.valueOf(resultSet.getInt("EMPLOYEEID")).toString(),
                         resultSet.getString("LASTNAME"),
                         resultSet.getString("FIRSTNAME"),
                         resultSet.getString("ADDRESS"),
@@ -69,6 +89,11 @@ public class MySQLEmployeeDAO implements EmployeeDAO {
         return employees;
     }
 
+    /**
+     * Retrieves all employee records and stores them in 2D array
+     * 2D array format used for GUI components
+     * @return 2D array of employee information
+     */
     @Override
     public Object[][] loadEmployeesTo2DArray() {
 
@@ -85,7 +110,7 @@ public class MySQLEmployeeDAO implements EmployeeDAO {
                 while (resultSet.next()) {
                     Object[] row = new Object[7]; // Assuming 6 columns in the table
                     row[0] = false;     // The is for the Select column.
-                    row[1] = new Integer(resultSet.getInt("EMPLOYEEID")).toString();
+                    row[1] = Integer.valueOf(resultSet.getInt("EMPLOYEEID")).toString();
                     row[2] = resultSet.getString("LASTNAME");
                     row[3] = resultSet.getString("FIRSTNAME");
                     row[4] = resultSet.getString("ADDRESS");
@@ -107,11 +132,15 @@ public class MySQLEmployeeDAO implements EmployeeDAO {
         return null;
     }
 
+    /**
+     * Adds new employee record to databased based on EmployeeEntity object
+     * @param employee EmployeeEntity object
+     */
     @Override
     public void addEmployee(EmployeeEntity employee) {
         try (Connection connection = DriverManager.getConnection(dbUrl, dbUser, dbPassword);
              PreparedStatement statement = connection.prepareStatement("INSERT INTO employees (id, name, email) VALUES (?, ?, ?)")) {
-            statement.setInt(1, new Integer(employee.getEmployeeId()));
+            statement.setInt(1, Integer.parseInt(employee.getEmployeeId()));
             statement.setString(2, employee.getLastName());
             statement.setString(3, employee.getFirstName());
             statement.setString(4, employee.getFirstName());
@@ -123,6 +152,10 @@ public class MySQLEmployeeDAO implements EmployeeDAO {
         }
     }
 
+    /**
+     * Updates existing employee record
+     * @param employee EmployeeEntity object
+     */
     @Override
     public void updateEmployee(EmployeeEntity employee) {
         try (Connection connection = DriverManager.getConnection(dbUrl, dbUser, dbPassword);
@@ -149,16 +182,5 @@ public class MySQLEmployeeDAO implements EmployeeDAO {
 
     @Override
     public void deleteEmployee(int id) {
-        /*
-        try (Connection connection = DriverManager.getConnection(dbUrl, dbUser, dbPassword);
-             PreparedStatement statement = connection.prepareStatement("DELETE FROM employees WHERE id = ?")) {
-            statement.setInt(1, id);
-            statement.executeUpdate();
-        }
-        catch (SQLException ex)
-        {
-            ex.printStackTrace();
-        }
-        */
     }
 }
